--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -223,6 +223,8 @@ Conclusion: Indirectly-backed coins will fulfill bids greater than \$1 USD assum
 
 There are many design decisions to consider when deploying an indirectly-backed stablecoin: the ratio by which the initial deposit exceeds the redemption value (\eg 1.5x), if coins can be redeemed any time, if a third-party can trigger a redemption (\eg for a fee) if they notice a deposit is close to losing more value than the face value of the coins (before the coin holder does), how close the deposit can get to losing value before such a trigger, and if all deposits backing all such coins should be pooled together, so all coins are interchangeable (`fungible'), or each coin is tied to a specific deposit. Note that while allowing third parties to trigger a redemption seems like a sensible service, if the coin holder is not monitoring the situation, they will end up holding ETH, instead of an AliceCoin, which is still losing value. This mechanism is really only about maintaining the reputation of the stablecoin.
 
+If the contract holding the deposit is thought of as a financial instrument (and the stablecoin could enable it to be sold from Alice to Bob), it appears to be a novel configuration. It however has certain aspects in common with existing financial instruments. We outline a few here for readers familiar with finance, but the rest of this section can otherwise be skipped. Repurchase agreements also over-collateralize to insure against a decrease in the collateralized asset's value. If the contracts are sold, the value depends on the future exchange rate and thus are effectively an ETH-settled derivative, but not of a standard type. Another way to think about the stablecoin and underlying contract is as a single asset with two tranches: the first tranche is held by the buyer of the stablecoin and gets paid first until \$1 USD is reached, then the rest of the deposit spills into the second tranche (held by the underwriter of the contract). 
+
 % Jeremy: check the math of triggering earlier to confirm that there is no difference
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
@@ -245,7 +247,7 @@ There are many design decisions to consider when deploying an indirectly-backed 
 
 The second main class of stablecoins are not backed by a separate asset, like the USD. Instead they allow for interventions that are meant to increase or decrease the value of the currency.  Deciding when to intervene is the first design decision, and the decision central banks use. A modern central bank might look at how much one bank charges another bank, in interest, for a short-term loan.\footnote{This value is readably available to the central bank, as these loans tend to be arranged daily by a payments system the bank maintains, and influencing this interest rate trickles out over time to other interest rates in the economy, and interest rates are seem as a force for influencing other metrics like the stability of the exchange rate, inflation, imports and exports, and the general health of the economy.} In a cryptocurrency, none of this infrastructure exists: there are no banks, no central banks, no interest rates without lending, and no lending without a stable currency.
 
-Instead, most stablecoin projects use the exchange rate with a fiat currency (\eg the USD) as input to the intervention mechanism. This makes these coins look more similar to coins that are backed by USD (in Section~\ref{sec:t2}). This is good for cross-comparison in a paper like this, but the reader should bear in mind that any economic metric could be used instead with these coins, including ones not based on an exchange rate. Second, we remark that central banks in the past have used exchange rates to decide when to intervene, but this approach was not found inadequate for stablising an economy. Alternatives to the exchange rate might include interest rates (if lending markets emerge), purchasing power, or measurements on the amount, volume, and/or velocity of transactions. The challenge for these is ensuring the metrics cannot be easily manipulated in the blockchain environment, where single entities can created unlimited identities and wash transactions, trades, loans, \etc with themselves.  
+Instead, most stablecoin projects use the exchange rate with a fiat currency (\eg the USD) as input to the intervention mechanism. This makes these coins look more similar to coins that are backed by USD (in Section~\ref{sec:t2}). This is good for cross-comparison in a paper like this, but the reader should bear in mind that any economic metric could be used instead with these coins, including ones not based on an exchange rate. Second, we remark that central banks in the past have used exchange rates to decide when to intervene, but this approach was not found inadequate for stablising an economy. Alternatives to the exchange rate might include interest rates (if lending markets emerge), purchasing power, or measurements on the amount, volume, and/or velocity of transactions. The challenge for these is ensuring the metrics cannot be easily manipulated in the blockchain environment, where single entities can created unlimited identities and wash transactions, trades, loans, \etc with themselves. If the metric(s) could be inferred from the blockchain itself, the stability mechanism could be autonomous and fully decentralized. 
 
 The second design decision is what intervention to make. All the stablecoin projects in this category make the same fundamental intervention: the supply of the stablecoin is increased to curb the value of the currency, and the supply is contracted to boost its value. The final design decision is how exactly the supply is manipulated. Some coins very directly influence the money supply, while other coins try to turn currency into assets to contract, and turn assets into currency to expand. This is obviously inspired by how modern central banks influence interest rates.\footnote{Central banks will purchase assets, like government bonds, from banks at competitive prices to increase the bank's cash and lower the interest rate at which the bank will lend. Conversely, they will sell assets to the banks at competitive prices to remove cash from the banks, causing a greater demand for cash loans, which tends to increase inter-bank interest rates.} The final design decision is deciding who participates in these mechanisms. 
 
@@ -258,52 +260,35 @@ In this section, we refer to the proposed stability mechanisms as \textit{heuris
 \subsection{Money Supply Adjustments}
 \label{sec:elastic}
 
-Intro
+Cryptocurrencies like Bitcoin release new BTC to miners on a fixed schedule that decreases the amount released over time until all BTC will be minted. This schedule is likely to be an important component to the valuation of BTC in the long run, but it is unknown (and controversial amongst economists) how changes in the money supply affect exchange rates in the short term, or the extent that theories developed for governmental money can even be applied to cryptocurrencies. The stablecoins in this (and the next) section are based on the theory that increasing the supply of money (all else held constant) will weaken the purchasing power of the currency and contracting the supply will strengthen it.
+
+Allowing a crypto-currency to expand is not difficult. Who benefits from the new currency is a design decision---options include: (1) existing holders of the currency in proportion to their holdings, (2) existing holders through a random lottery, and (3) miners. For some stablecoins in this category, interventions are triggered by the exchange rate as determined by an oracle. In the RSCoin framework~\cite{danezis2015centrally}, intervention is based on human  (\ie economists at a central bank) discretion. Finally, for some coins, contraction of the money supply is also supported. This is an interesting aspect as the technology of a cryptocurrency enables currency to be removed at any time from any holder; balancing this with a fair procedure adds further interest.
 
 \paragraph{Process.} Alice forks Bitcoin to create a new altcoin called AliceCoin. She sets Bitcoin's fixed schedule for releasing new Bitcoin as the default behaviour but allows this value (called the coinbase amount) to be tweaked according to the rules outlined below. She setups up a trusted oracle for the latest exchange rate of AliceCoins to USD. AliceCoin is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD. If the price exceeds \$1.02 USD, the miner is allowed to increase the coinbase amount (the amount is determined by some mathematical relationship with how much the price exceeds \$1.02 USD). If the price dips under \$0.98 USD, the miner must decrease the coinbase amount (again, based on some mathematical relationship). The correctness of the claimed coinbase is verified by other miners in deciding to accept or reject a mined block, as per all other checked conditions in Bitcoin.
 
 \paragraph{Variant Process.} Similar to above, Alice forks Bitcoin, preserves its coinbase schedule, and adds a trusted exchange rate oracle. When the price exceeds \$1.02 USD, the coin increases the balance of every AliceCoin holder; when it dips below \$0.98 USD, the coin decreases the balance of every AliceCoin holder.
 
-\paragraph{Price Stability.} Justification that bids will never exceed \$1. Justification that offers will be less than \$1.
+\paragraph{Price Stability.} If many bids in excess of \$1.02 USD remain unexecuted, the currency inflates. In theory, holders of the currency should be more willing to spend it, including spending it on obtaining USD. If this follows, the best bids will be executed and the new best bid will be at a lower price. This process can continue until bids are again under \$1.02. This is a heuristic because there are no guarantee the receipients will spend the new currency (or spend it on USD, in particular if demand for USD is falling). The justification for asks below \$0.98 is symmetrical: the currency contractions will make holders less willing to spend it on USD which will stop bids from being replenished at lower prices. This logic also assumes a lot. If the price drop is caused by a lack of demand of AliceCoins (rather than an oversupply), then removing AliceCoins will decrease the number of asks---which means it will take less matching bids to move the spread toward \$1 USD but this is not the same as incentivizing traders to make matching bids. 
 
-Conclusion: recap.
-
-\paragraph{Discussion.} Can actionally do this. No zero bound.
-
-% Examples: RSCoin (Danezis\etal ~\cite{danezis2015centrally}) : a cryptocurrency framework proposed by Danezis\etal  The supply of money is regulated by a central bank. However, the system depends on a group of distributed authorities to provide transparency and audibility.
-
-% Zero bound -> actually maybe not: Miner gets Reward + Fees, reward can be negative if fees are larger and difference is removed from circulation. -> pushing volatility into fees
-
-% Ambleforth -> just take currency from holders.
-
-
+\paragraph{Discussion.} When the coinbase is increased or decreased dynamically (sometimes called an elastic coinbase), it is apparent that there is no bound on how much the increase can be. It is less apparent what the bound is on a decrease. For example, if a block offers no coinbase (the zero bound), will miners still mine it? Recall that miners are still incentivized to mine the block because of fees provided in the transactions (In fact this is how Bitcoin will eventually function---how well is debatable~\cite{}). This is not inconsequential. If there are not sufficinet transactions with fees, blocks will stop being produced (whereas under a positive coinbase, empty blocks will still be produced on schedule). What about a negative coinbase? Obviously no miner will pay out to mine a block but since they are rewarded the sum of the coinbase and the transaction fees, a coinbase can indeed be negative and miners will mine such a block if the transaction fees are greater than the negative coinbase. Under this deployment, users paying fees to transact are effectively burning most of their transaction fee to contract the money supply. There is an actual zero bound on the amount the coinbase can go negative---the total supply of the currency---but a currency would become dysfunctional long before that bound is reached. 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 % Jeremy: Putting summary chart here so the spacing is better
 \input{sections/eval.tex}
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
-
-
 \subsection{Asset Transfer}
 \label{sec:basecoin}
 
-% Description of how it works.
-% Justification that bids will never exceed $1
-% Justification that offers will be less than $1
+The second subtype of intervention-based stablecoin is modelled on the same premise that an increased currency supply weakens the currency, while decreases strengthen it. However it uses an indirect method to introduce new currency into circulation and withdraw currency. 
 
 \paragraph{Process.} Alice creates an ERC20 token called AliceCoin and setups up a trusted oracle for the latest exchange rate of AliceCoins to USD. A smart contract is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD.  If the price exceeds \$1.02 USD, the contract creates new a set of AliceCoins (the size is determined by some mathematical relationship with how much the price exceeds \$1.02 USD) and transfers them to users waiting in line for them. How do users wait in line? When the price dips under \$0.98 USD, the contract creates new positions at the end of the line and auctions them off to the highest bidder. The payment for a place in line is made in AliceCoins from the bidder to the contract and the contract destroys the payment. The place in line is a transferrable token. An additional transferrable token can be auctioned off which receives AliceCoins when the line is empty.
 
-% Description of how it works.
-% Push volatility around -> into bonds which flucuate from deep haircut to \$1 USD
+\paragraph{Price Stability.} If many bids in excess of \$1.02 USD remain unexecuted, the logic follows the previous section: the currency is handed out in hopes that the bids will be more attractive with a new influx of cash. The justification for asks below \$0.98 is premised on individuals buying places in line, and if this premise is true, the resulting contraction of the currency follows the same logic as the previous section. This logic was already inconclusive without the addition of this questionable premise. The purchase of a spot in line is highly speculative --- not just that the currency will return to stability but that it will actually accrue value in the long run that will require correction. Thus a spot in line might never be reached and is in fact worthless. The risk that a spot in line is worthless will increase the longer the line gets. As the line gets longer, the price of a place in line should fall, and the speculative market should thin out to only traders wanting a high risk/reward ratio. These trends do not point toward a recovery in price. 
 
-\paragraph{Price Stability.}
-% Justification that bids will never exceed $1
-% Justification that offers will be less than $1
-% Examples:
+\paragraph{Discussion.} Consider an ideal stability mechanism: one could deposit a highly volatile coin and receive a low volatility coin. Such a mechanism might be impossible. Stablecoins of this category attempt a trick: they do turn high volatility coins into low volatility coins, however they also produce extrem volatility `coins.' In other words, two types of coins are output and the volatility is pushed from the one type of coin onto the other. This is not unlike some financial assets which do not reduce overall risk, but simply push it from one tranche of the asset to another.
 
-\paragraph{Discussion.}
-% Push volatility around
+We also remark that we took some time to develop a clear presentation of this stability process. Projects describe our `place in line' asset very differently: for example, as purchasing bonds (basecoin), as parking assets (NuCoin), or with confusing terminology like seignorage shares. % Push volatility around
 % \textblue{Ethereum Alarm Clock problem.}
 
 
@@ -336,7 +321,7 @@ Let us take a step back and think about the larger picture. If we have trustwort
 
 \subsection{Visualizing stability}\label{sec:stability}
 
-\begin{figure}[t]
+\begin{figure}[t!]
 	\centering
 	\subfloat[ETH]{\includegraphics[width=0.45\textwidth]{figures/eth.pdf}\label{fig:eth}}
 	\hfill
@@ -365,7 +350,7 @@ Next we plot a number of stablecoins in Figure~\ref{fig:all}. The top two plots 
 
 %========================%
 
-\section {Ethereum's gas: a stable `coin'?}\label{sec:GasInvs}
+\subsection {Ethereum's gas: a stable `coin'?}\label{sec:GasInvs}
 
 \begin{figure}[t]
 	\centering
@@ -380,14 +365,11 @@ DApps on Ethereum execute arbitrary code provided by the owner of the DApp. Whil
 
 Gas was envisioned as maintaining a relatively stable value where a particular function should cost the same amount (say in USD) over time, even as the price of ETH changes dramatically (as seen in Figure~\ref{fig:eth}). We first investigate how successful gas has been with the charts in Figure~\ref{fig:gas}, which show the monthly average gas price variations with respect to USD and ETH in the first chart; and electricity and USD in the other. Electricity data is from a US-based average index which does not necessarily reflect the costs of mining on a global blockchain, like Ethereum, but if gas were correlated to electricity generally, it should be evident from a representative energy index. Gas demonstrates diagonal movements along the 2/6 direction meaning that it actually moves independently of ETH, USD and electricity. There is no strong evidence of stability. This could be due to a few factors. First, the graph is dominated by one large spike and one moderate spike which correspond to (i) when the popuar Ethereum game Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was first launched (January 2018) and, (ii) when the China-based crypto exchange FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was launched (July 2018) and required a lot of on-chain voting. Both these events  clogged up the Ethereum network and increased the gas price as users had to pay more gas for their transactions to go through. Second, it is probably true that users do not have a strong mental model of how much gas to stake for a computation and rely heavily on the user interface for prompts about gas.
 
-Although gas might become a stable unit of account, it is not a store of value because it cannot be held or transacted. However gas could be used to back a stablecoin, much like the coins in the directly-backed category. Amazingly, such a gas-backed coin could even be made redeemable.Ethereum is designed in such a way that it allows users to create a smart contract which stockpile and swaps gas with other tokens. Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data~\cite{wood2014ethereum}. 
+Although gas might become a stable unit of account, it is not a store of value because it cannot be held or transacted. However gas could be used to back a stablecoin, much like the coins in the directly-backed category. Amazingly, such a gas-backed coin could even be made redeemable.Ethereum is designed in such a way that it allows users to create a smart contract which stockpile and swaps gas with other tokens. Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data~\cite{wood2014ethereum}. GasToken is a directly-backed and redeemable tokenization of gas.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens. Later when the gas price increases (\eg 50 Gwei), users can redeem their GasTokens. However they do not receive ETH back; rather, they use the tokens to pay the transaction fees for other computations. 
 
-GasToken is the directly-backed and redeemable tokenization of gas.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens, as mentioned, such transaction costs a lot of gas but it does not cost much in ETH or USD as the gas is cheap. Later when the gas price increases (\eg 50 Gwei), users can spend their GasTokens to pay for transactions. Thus, users benefit from paying for less gas and bidding for higher \textsf{gasPrice} in their transactions. 
-
-%However, GasToken can also simplify the front-running attacks for arbitrage on the Ethereum network. In order to profit, arbitrage bots need to be fast traders and they constantly send transactions to the Ethereum network. So lower transaction fees (provided by GasTokens) simplifies the front-running attacks for them~\cite{Eskandari2019SoKTD}.
+As users' mental model of gas improves over time, the volatility of gas has the potential to reduce. Gas-backed tokens represent a new class of stablecoin that float in value without any direct ties to USD, references to exchange rates, or explicit intervention mechanisms. It is an interesting subject worthy of further research. 
 
 %========================%
-
 
 %\subsection{Consequences for Central Banking}
 
