Full round Edits on paper

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -167,7 +167,7 @@ Next we consider stablecoins that are directly-backed---exactly as in the previo
 
 \paragraph{Process.} As previously, Alice is a trusted third party and uses Ethereum to generate a contract to issue 1000 AliceCoins as ERC20 tokens. She asks \$1 USD for 1 AliceCoin and promises to deposit the payment. If Bob buys 10 AliceCoins for \$10 USD, Alice deposits the \$10 USD in a bank account. Any time Alice receives a request for AliceCoins but does not have any left to sell, she creates new ones and deposits the payment. Alice frequently obtains bank statements showing that her account holds USD equivalent to the number of coins in circulation (the number of AliceCoins can be checked anytime on Ethereum).
 
-\paragraph{Price Stability.} Again, assume all transactions are free and frictionless. Bids will not exceed \$1 for the same reason the coins in the previous section (Section~\ref{sec:redeem}). Consider an ask for 1 AliceCoin for less than \$1 USD. Bob will only immediately purchase this AliceCoin for its asking price if he has some assurance it will return to \$1 USD. Because it is not redeemable, the only mechanism that will push the value up is psychological: others in the market will ask \$1 USD because they believe it is valued at \$ USD because it is backed by \$1 USD.
+\paragraph{Price Stability.} Again, assume all transactions are free and frictionless. Bids will not exceed \$1 for the same reason the coins in the previous section (Section~\ref{sec:redeem}). Consider an ask for 1 AliceCoin for less than \$1 USD. Bob will only immediately purchase this AliceCoin for its asking price if he has some assurance it will return to \$1 USD. Because it is not redeemable, the only mechanism that will push the value up is psychological: others in the market will ask \$1 USD because they believe it is valued at \$1 USD because it is backed by \$1 USD.
 
 Conclusion: bids will not exceed \$1 USD but the best ask could vary from \$0 USD to \$1 USD without being immediately traded.
 
@@ -286,9 +286,9 @@ The second subtype of intervention-based stablecoin is modelled on the same prem
 
 \paragraph{Price Stability.} If many bids in excess of \$1.02 USD remain unexecuted, the logic follows the previous section: the currency is handed out in hopes that the bids will be more attractive with a new influx of cash. The justification for asks below \$0.98 is premised on individuals buying places in line, and if this premise is true, the resulting contraction of the currency follows the same logic as the previous section. This logic was already inconclusive without the addition of this questionable premise. The purchase of a spot in line is highly speculative --- not just that the currency will return to stability but that it will actually accrue value in the long run that will require correction. Thus a spot in line might never be reached and is in fact worthless. The risk that a spot in line is worthless will increase the longer the line gets. As the line gets longer, the price of a place in line should fall, and the speculative market should thin out to only traders wanting a high risk/reward ratio. These trends do not point toward a recovery in price. 
 
-\paragraph{Discussion.} Consider an ideal stability mechanism: one could deposit a highly volatile coin and receive a low volatility coin. Such a mechanism might be impossible. Stablecoins of this category attempt a trick: they do turn high volatility coins into low volatility coins, however they also produce extrem volatility `coins.' In other words, two types of coins are output and the volatility is pushed from the one type of coin onto the other. This is not unlike some financial assets which do not reduce overall risk, but simply push it from one tranche of the asset to another.
+\paragraph{Discussion.} Consider an ideal stability mechanism: one could deposit a highly volatile coin and receive a low volatility coin. Such a mechanism might be impossible. Stablecoins of this category attempt a trick: they do turn high volatility coins into low volatility coins, however they also produce extreme volatility `coins.' In other words, two types of coins are output and the volatility is pushed from the one type of coin onto the other. This is not unlike some financial assets which do not reduce overall risk, but simply push it from one tranche of the asset to another.
 
-We also remark that we took some time to develop a clear presentation of this stability process. Projects describe our `place in line' asset very differently: for example, as purchasing bonds (basecoin), as parking assets (NuCoin), or with confusing terminology like seignorage shares. % Push volatility around
+We also remark that we took some time to develop a clear presentation of this stability process. Projects describe our `place in line' asset very differently: for example, as purchasing bonds (Basecoin), as parking assets (NuCoin), or with confusing terminology like seignorage shares. % Push volatility around
 % \textblue{Ethereum Alarm Clock problem.}
 
 
@@ -363,7 +363,7 @@ Next we plot a number of stablecoins in Figure~\ref{fig:all}. The top two plots 
 
 DApps on Ethereum execute arbitrary code provided by the owner of the DApp. While this code might be written in a high-level programming language like Solidity, it is compiled to a compact representation (called `bytecode') that is a set of low-level instructions to the environment (Ethereum virtual machine or EVM). Because different functions will have different complexities, the user running the function pays in proportion to the number of instructions, the complexity of the instructions, and the storage requirements. This means that each operation has a fixed price. Naturally the operations might be priced in ETH, since this the on-board currency, however this would cause the price of computation to be as volatile as Ether itself. Instead, Ethereum uses a pseudo-currency called gas.\footnote{http://ethdocs.org/en/latest/contracts-and-transactions/account-types-gas-and-transactions.html\#what-is-gas} Each instructions has a fixed price in gas. A user who wants to run a function will offer to pay a certain amount of ETH per unit of gas to the miner who finalizes the function. Miners will generally choose which functions to run first based on how much ETH/gas they offer, and they might ignore functions that offer too little ETH/gas. We describe gas as a pseudo-currency because it cannot be directly stored or transacted, however we will revisit this below.
 
-Gas was envisioned as maintaining a relatively stable value where a particular function should cost the same amount (say in USD) over time, even as the price of ETH changes dramatically (as seen in Figure~\ref{fig:eth}). We first investigate how successful gas has been with the charts in Figure~\ref{fig:gas}, which show the monthly average gas price variations with respect to USD and ETH in the first chart; and electricity and USD in the other. Electricity data is from a US-based average index which does not necessarily reflect the costs of mining on a global blockchain, like Ethereum, but if gas were correlated to electricity generally, it should be evident from a representative energy index. Gas demonstrates diagonal movements along the 2/6 direction meaning that it actually moves independently of ETH, USD and electricity. There is no strong evidence of stability. This could be due to a few factors. First, the graph is dominated by one large spike and one moderate spike which correspond to (i) when the popuar Ethereum game Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was first launched (January 2018) and, (ii) when the China-based crypto exchange FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was launched (July 2018) and required a lot of on-chain voting. Both these events  clogged up the Ethereum network and increased the gas price as users had to pay more gas for their transactions to go through. Second, it is probably true that users do not have a strong mental model of how much gas to stake for a computation and rely heavily on the user interface for prompts about gas.
+Gas was envisioned as maintaining a relatively stable value where a particular function should cost the same amount (say in USD) over time, even as the price of ETH changes dramatically (as seen in Figure~\ref{fig:eth}). We first investigate how successful gas has been with the charts in Figure~\ref{fig:gas}, which show the monthly average gas price variations with respect to USD and ETH in the first chart; and electricity and USD in the other. Electricity data is from a US-based average index which does not necessarily reflect the costs of mining on a global blockchain, like Ethereum, but if gas were correlated to electricity generally, it should be evident from a representative energy index. Gas demonstrates diagonal movements along the 2/6 direction meaning that it actually moves independently of ETH, USD and electricity. There is no strong evidence of stability. This could be due to a few factors. First, the graph is dominated by one large spike and one moderate spike which correspond to (i) when the popular Ethereum game Cryptokitties \footnote{Cryptokitties website \url{https://www.cryptokitties.co/}} was first launched (January 2018) and, (ii) when the China-based crypto exchange FCOIN \footnote{Fcoin website \url{https://www.fcoin.com}} was launched (July 2018) and required a lot of on-chain voting. Both these events  clogged up the Ethereum network and increased the gas price as users had to pay more gas for their transactions to go through. Second, it is probably true that users do not have a strong mental model of how much gas to stake for a computation and rely heavily on the user interface for prompts about gas.
 
 Although gas might become a stable unit of account, it is not a store of value because it cannot be held or transacted. However gas could be used to back a stablecoin, much like the coins in the directly-backed category. Amazingly, such a gas-backed coin could even be made redeemable.Ethereum is designed in such a way that it allows users to create a smart contract which stockpile and swaps gas with other tokens. Operations that store data on Ethereum blockchain modify its global state hence they are very expensive. So in order to incentivize users to free up space on the blockchain, Ethereum refunds the amount of gas users paid if they delete their smart contracts or stored data~\cite{wood2014ethereum}. GasToken is a directly-backed and redeemable tokenization of gas.\footnote{https://github.com/projectchicago/gastoken} When the gas price is low (\eg 1 Gwei), users can store some data on the GasToken contract and create GasTokens. Later when the gas price increases (\eg 50 Gwei), users can redeem their GasTokens. However they do not receive ETH back; rather, they use the tokens to pay the transaction fees for other computations. 
 
@@ -382,12 +382,6 @@ As users' mental model of gas improves over time, the volatility of gas has the 
 \section{Conclusion}
 
 In this paper, we provide a survey of active stablecoin projects. Unlike previous research studies performed on this topic, we selectively use the concepts from finance while eliminating the jargons. In addition, rather than focusing on the details of how particular `brands' of stablecoins work, we thoroughly describe the fundamental mechanics and concepts to achieve price stability. Respectively, we show the taxonomy we use to classify stablecoins which represents the techniques to build a stablecoin. Additionally, we evaluate different price stability achieving mechanics based on their fundamental design decisions and trust models. The comparative evaluation framework highlights the advantages and disadvantages of each techniques more precisely. Eventually, we explore the potential stable index-cryptocurrencies (namely Ethereum gas) in the context of stablecoins.
-
-
-
-
-
-
 
 
 
