--- a/stable-coin-paper/main.tex
+++ b/stable-coin-paper/main.tex
@@ -15,8 +15,8 @@
 \title{Demystifying Stablecoins}
 \author{}\date{}
 
-%\author{Didem Demirag \and Seyedehmahsa Moosavi \and Jeremy Clark}
-%\date{\textit{Gina Cody School of Engineering and Computer Science\\Concordia University}}
+\author{Seyedehmahsa Moosavi \and Didem Demirag \and Jeremy Clark}
+\date{\textit{Gina Cody School of Engineering and Computer Science\\Concordia University}}
 \maketitle
 
 % = = = = = Abstract = = = = = %
@@ -28,6 +28,11 @@
 % = = = = = Main Body = = = = = %
 
 \input{sections/stablecoin}
+
+% = = = = = Ack = = = = = %
+
+\subsubsection*{Acknowledgements.}
+The authors thank the Autorit\'e des March\'es Financiers (AMF) for sponsoring this research through the Education and Good Governance Fund (EGGF), as well as NSERC through a Discovery Grant. 
 
 % = = = = = Bibliography = = = = = %
 \bibliography{bib/stablecoinRef}
