--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -28,7 +28,7 @@ In response to Bitcoin's extreme volatility, a flood of proposals have been made
 
 An early idea for a stable cryptocurrency was introduced by Ametrano in 2016~\cite{ametrano2016hayek} which tweaked supply (see Section~\ref{sec:stability}) In 2017, Robert Sams introduced a new dual token system that uses two coins to achieve price stability: (i) a stablecoin (\eg fiat currency) and (ii) a volatile coin (\eg equity shares)~\cite{sams2015note} (see Section~\ref{sec:stability}). These informed the designs of stablecoins we discuss in the paper.
 
-There are many blog posts and professional reports providing an overview of stablecoins with essentially the same goal as this paper. Most have the same general categorization: (i) fiat-collateralized, (ii) crypto-collateralized and (iii) non-collateralized, also known as algorithmic,\eg~\cite{hackernoon, comprehensiveOverview, linkedin}. Buterin, in one of the earliest blog posts on stable cryptocurrencies, discussed different techniques to measure cryptocurrencies' price and how to make adjustments in the supply to achieve a fixed price accordingly~\cite{TheSearc7:online}. Bitmex looked at the mechanics of the distributed stablecoins while focusing on two case studies (\ie BitShares (BitUSD) and MakerDAO (Dai))~\cite{bitmex}. Another report by crypto company Blockchain provides an extensive classification of 57 stablecoins together with discussions on issues related to governance (\eg legal structure, investors, partners \etc)~\cite{reportone}. They extend this research in a newly published report that reflects a significant update on their previous work~\cite{reporttwo}. In one of its blog posts, Consensys \footnote{https://consensys.net} describes stablecoins as ``crypto-assets that maintain a stable value against a target price (\eg USD)'' and classify them according to three main categories~\cite{StateofS96:online}. In~\cite{cryptoinsider}, the authors use a slightly different categorization to group 13 stabelcoin projects into two broad categories: (i) centralized-- which itself contains subcategories based on the type of the asset the coins are backed by (\eg fiat and gold), (ii) decentralized. Our survey can be differentiated from the related work in its focus: we strive for clear descriptions of the mechanics of stability within a coin, without glossing over details or substituting financial jargon for explanation. We focus less on any infrastructure around a stablecoin deployment (\eg it's code, interactions between contracts, governance, \etc).
+There are many blog posts and professional reports providing an overview of stablecoins with essentially the same goal as this paper. Most have the same general categorization: (i) fiat-collateralized, (ii) crypto-collateralized and (iii) non-collateralized, also known as algorithmic,\eg~\cite{hackernoon, comprehensiveOverview, linkedin}. Buterin, in one of the earliest blog posts on stable cryptocurrencies, discussed different techniques to measure cryptocurrencies' price and how to make adjustments in the supply to achieve a fixed price accordingly~\cite{TheSearc7:online}. Bitmex looked at the mechanics of the distributed stablecoins while focusing on two case studies (\ie BitShares (BitUSD) and MakerDAO (Dai))~\cite{bitmex}. Another report by crypto company Blockchain provides an extensive classification of 57 stablecoins together with discussions on issues related to governance (\eg legal structure, investors, partners \etc)~\cite{reportone}. They extend this research in a newly published report that reflects a significant update on their previous work~\cite{reporttwo}. In one of its blog posts, Consensys \footnote{https://consensys.net} describes stablecoins as ``crypto-assets that maintain a stable value against a target price (\eg USD)'' and classify them according to three main categories~\cite{StateofS96:online}. In~\cite{cryptoinsider}, the authors use a slightly different categorization to group 13 stablecoin projects into two broad categories: (i) centralized-- which itself contains subcategories based on the type of the asset the coins are backed by (\eg fiat and gold), (ii) decentralized. Our survey can be differentiated from the related work in its focus: we strive for clear descriptions of the mechanics of stability within a coin, without glossing over details or substituting financial jargon for explanation. We focus less on any infrastructure around a stablecoin deployment (\eg it's code, interactions between contracts, governance, \etc).
 
 %Cite Ross Anderson's paper :"Bitcoin Reducx" :
 % Anderson\etal discuss different negative externalities that are introduced by Bitcoin~\cite{anderson2019bitcoin}. They perform and discuss taint tracking using First-In-First-Out (FIFO) algorithm ( inspired by the Clayton’s case) on some well-established Bitcoin theft scenarios. They also point out that crypto space needs effective regulation in order to function properly and securely, at the end they provide regulatory remarks for the future.
@@ -120,6 +120,10 @@ Lending a volatile currency poses a risk for both the cash provider and cash tak
 \end{quote}
 
 
+
+
+
+
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
 \section{Type 1: Backed Stablecoins}
@@ -135,6 +139,27 @@ To find stablecoin projects, we performed a number of search queries on \textit{
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
+\begin{table}[t!]
+\centering
+\begin{tabular}{|l|}
+\multicolumn{1}{c}{\textbf{Stability Mechanisms}}  \\ \hline
+
+\multicolumn{1}{|p{\textwidth}|}{\textbf{Directly Backed and Redeemable.}\newline \footnotesize Alice is a trusted third party and uses Ethereum to instantiate a decentralized application (DApp) which issues 1000 AliceCoins as standard tokens (\eg ERC20). She asks \$1 USD for 1 AliceCoin and promises to redeem any AliceCoin for \$1 USD. If Bob buys 10 AliceCoins for \$10 USD, Alice deposits the \$10 USD in a bank account. Any time Alice receives a buy order for AliceCoins and does not have any left to sell, she creates new ones to sell. If Carol wants to redeem 5 AliceCoins, Alice withdraws \$5 USD and exchanges it with Carol, taking those AliceCoins out of circulation. Alice frequently publishes bank statements showing that her account holds enough USD to redeem all coins in circulation (the number of AliceCoins can be checked anytime on Ethereum).} \\ \hline
+
+\multicolumn{1}{|p{\textwidth}|}{\textbf{Directly Backed.} \newline \footnotesize  Again, Alice is a trusted third party that issues 1000 AliceCoins as ERC20 tokens. She asks \$1 USD for 1 AliceCoin and promises to deposit and hold the payment in a bank account. As before, Alice creates new AliceCoins when she runs out and publishes frequent bank statements. Unlike above, she offers no direct redemption of AliceCoins for USD.} \\ \hline
+
+\multicolumn{1}{|p{\textwidth}|}{\textbf{Indirectly Backed.} \newline \footnotesize Alice is no longer assumed to be trustworthy. She sets up a DApp that can hold ETH and issue tokens. The DApp determines how much ETH is equivalent to \$1.50 USD using the current exchange rate, provided to the DApp by a trusted third party oracle, and Alice deposits this amount of ETH into the DApp. The DApp issues to Alice two places in a line --- each place is a transferrable token. At some future time, the holder of the first place in line can redeem up to \$1.00 USD worth of the deposited ETH at the future exchange rate, and the holder of the second place in line gets any remaining ETH. Alice will transfer the first place in line (as a stable coin called AliceCoin) to Bob for \$1.00 USD, and will hold or sell the second place in line. When Bob redeems the AliceCoin, it will be worth \$1 USD in ETH when the entire deposit of ETH is worth more than \$1 USD. If the exchange rate drops enough, the deposit will be worth less than \$1 USD --- Bob will get all of the deposit and the holder of the second place in line will get nothing.} \\ \hline
+
+\multicolumn{1}{|p{\textwidth}|}{\textbf{Money Supply Adjustments.} \newline \footnotesize Alice forks Bitcoin to create a new altcoin called AliceCoin. She tweaks the schedule for releasing new AliceCoins (called the coinbase amount in Bitcoin) according to the rules outlined below. She sets up a trusted oracle for the latest exchange rate of AliceCoins to USD. AliceCoin is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD. If the price exceeds \$1.02 USD, the miner is allowed to increase the coinbase amount (the amount is determined by some mathematical relationship with how much the price exceeds \$1.02 USD). If the price dips under \$0.98 USD, the miner must decrease the coinbase amount based on the same relationship. The correctness of the claimed coinbase is verified by other miners in deciding to accept or reject a mined block, as per all other checked conditions in Bitcoin.} \\ \hline
+
+\multicolumn{1}{|p{\textwidth}|}{\textbf{Asset Transfer.} \newline \footnotesize Alice instantiates a DApp with an ERC20 token called AliceCoin. The DApp is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD according to a trusted oracle. If the price exceeds \$1.02 USD, the DApp creates new a set of AliceCoins (as above, according to some mathematical relationship) and transfers them to users waiting in line for them. How do users wait in line? When the price dips under \$0.98 USD, the DApp creates new positions at the end of the line and auctions them off to the highest bidder. The payment for a place in line is made in AliceCoins from the bidder to the DApp and the DApp destroys the payment. The place in line is a transferrable token. If the line is empty, AliceCoins are distributed according to a fallback policy (see main text).} \\ \hline
+
+\end{tabular}
+\caption{Major types of stability mechanisms for stablecoins.\label{tab:mech}}
+\end{table}
+
+% = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
+
 \subsection{Directly-Backed and Redeemable}
 \label{sec:redeem}
 
@@ -142,7 +167,7 @@ The first direction one might take in producing a stablecoin is the creation of 
 
 The idea of tokenizing USD (or EUR or gold) for use on the internet is not new. Liberty Reserve and e-gold provided a similar service. Liberty Reserve dollars were redeemable in principle, but only indirectly through an intermediary and redemption could be refused. Meanwhile, e-gold was not redeemable (see next section of a discussion of the consequences of this). What is novel about a stable cryptocurrency is that transactions are not done on a centralized server, but rather finalized and settled on a decentralized blockchain. However since directly-backed stablecoins reintroduce centralization to create the digital tokens, maintain reserves of the underlying asset, and process redemption requests, the benefit of a decentralized transaction platform is marginal.
 
-\paragraph{Process.} Alice is a trusted third party and uses Ethereum to generate a contract to issue 1000 AliceCoins as standard (\eg ERC20) tokens. She lists asks \$1 USD for 1 AliceCoin and promises to redeem the tokens for \$1 USD. If Bob buys 10 AliceCoins for \$10 USD, Alice deposits the \$10 USD in a bank account. Any time Alice receives a request for AliceCoins but does not have any left to sell, she creates new ones and deposits the payment. If Carol wants to redeem 5 AliceCoins, Alice withdraws \$5 USD and exchanges it with Carol and takes the AliceCoins out of circulation. Alice frequently obtains bank statements showing that her account holds USD equivalent to the number of coins in circulation (the number of AliceCoins can be checked anytime on Ethereum).
+\paragraph{Process.} See Table~\ref{tab:mech}.
 
 \paragraph{Price Stability.} For simplicity, assume all transactions are free and frictionless. Consider a bid for 1 AliceCoin that is greater than \$1 USD. Bob will sell an AliceCoin immediately for this price and will ask Alice to generate a new AliceCoin, deposit only \$1 USD for this, and keep the rest of the bid value as profit. Therefore bids in excess of \$1 USD will be temporal assuming Alice is quick to generate new coins on demand. Next, consider an ask for 1 AliceCoin for less than \$1 USD. Bob will immediately purchase this AliceCoin for its asking price, try to redeem it for \$1 USD from Alice, and if successful, keep the difference as profit. Bob's willingness is proportional to the expectation that it can actually be redeemed for \$1 USD. For an example, if he only buys at \$ 0.60 USD, it might reveal that Bob believes there is only a 60\% chance of redeeming the coin or that he can only redeem 60\% of its redemption value (the asker thinks it must be less, otherwise she'd rather redeem it than sell it).
 
@@ -165,7 +190,7 @@ A variety of firms and projects providing stablecoins in this category exist. Wh
 
 Next we consider stablecoins that are directly-backed---exactly as in the previous section but they do not offer a redemption process for the coin's underlying assets. Redemption is logistically complicated. Consider a USD-backed dollar---it is usually easier for a firm to receive USD payments from users than it is for it to send payments back, and sending payments opens up new exposure to regulation. Instead the firms behind these coins  pledge to keep the backing assets in trust for the duration of the circulating coins. We will shortly explain what impact there is on the exchange rate if it does not provide redemption---obviously, if redemption was inconsequential than no one would offer it as it increases costs and complexity. For our ranking in Table~\ref{tab:stablecoins}, if we could not find a clear assertion of redemption, we listed the project under this category.
 
-\paragraph{Process.} As previously, Alice is a trusted third party and uses Ethereum to generate a contract to issue 1000 AliceCoins as ERC20 tokens. She asks \$1 USD for 1 AliceCoin and promises to deposit the payment. If Bob buys 10 AliceCoins for \$10 USD, Alice deposits the \$10 USD in a bank account. Any time Alice receives a request for AliceCoins but does not have any left to sell, she creates new ones and deposits the payment. Alice frequently obtains bank statements showing that her account holds USD equivalent to the number of coins in circulation (the number of AliceCoins can be checked anytime on Ethereum).
+\paragraph{Process.} See Table~\ref{tab:mech}.
 
 \paragraph{Price Stability.} Again, assume all transactions are free and frictionless. Bids will not exceed \$1 for the same reason the coins in the previous section (Section~\ref{sec:redeem}). Consider an ask for 1 AliceCoin for less than \$1 USD. Bob will only immediately purchase this AliceCoin for its asking price if he has some assurance it will return to \$1 USD. Because it is not redeemable, the only mechanism that will push the value up is psychological: others in the market will ask \$1 USD because they believe it is valued at \$1 USD because it is backed by \$1 USD.
 
@@ -209,7 +234,7 @@ Coins in this section try to find a middle-ground. They introduce a single trust
 
 Tokens then created when the equivalent of \$1 USD in ETH is collected, and redeemable for the equivalent of \$1 USD in ETH. Thus the amount of redeemable ETH can grow or shrink as the exchange rate with the USD changes. If it shrinks, the contract that issued the coin holds the difference and returns it to creator of the coin. If it grows, it is problematic because the contract cannot hold an unbounded amount of ETH. Thus the contract collects more than \$1 USD (say \$1.5 USD) when it mints a new coin to provide a buffer against falling ETH prices.
 
-\paragraph{Process.} Alice sets up a DApp that can hold ETH and issue ERC20 tokens called AliceCoins. The DApp determines how much ETH is equivalent to \$1.50 USD using the current exchange rate, provided to the DApp by a trusted oracle. Alice deposits this amount into the DApp and it issues 1 AliceCoin to Alice. Bob purchases 1 AliceCoin from Alice for \$1 USD. Bob transfer the AliceCoin to Carol and Carol returns to the DApp to redeem the coin. The DApp determines how much amount ETH is equivalent to \$1 USD (call this the strike price). If the deposit of ETH in the DApp is greater than the strike price, the DApp pays Carol the strike price and it returns the remainder of the deposited ETH to Alice. If the strike price is less than or equal to the deposit, Carol is paid the entire deposit and Alice is paid nothing (she does however have \$1 USD from Bob). In this scenario, Carol may not recover a full \$1 USD and therefore is incentivized to monitor the deposit value, and redeem quickly if the deposit value in USD drops close to the face value of her AliceCoins.
+\paragraph{Process.} See Table~\ref{tab:mech}.
 
 \paragraph{Price Stability.} Consider a bid for 1 AliceCoin that is greater than \$1 USD. Bob will sell an AliceCoin immediately for this price and will ask Alice to generate a new AliceCoin, pay her only \$1 USD for this, and keep the rest of the bid value as profit. (More generally, Bob could issue a BobCoin assuming the bid is for any coin backed by this type of contract). Therefore bids in excess of \$1 USD will be fulfilled as long as there are individuals willing to lock up a deposit of ETH that is 1.5x the face-value of what they receive. If there is a shortage of ETH for this purpose, AliceCoins might trade in excess of \$1 USD. It is important to note if Alice underwrites one of these contracts, retains the USD she sells the AliceCoin for, and the ETH/USD exchange rate changes, she will make or lose exactly the same amount of money as she would by simply holding the same amount of ETH she deposited. The exception is if the contract's deposit becomes worth less than the amount that can be redeemed from it --- in this case, Alice loses less money by underwriting the contract (the holder of the coin bears the loss) than if she held ETH.
 
@@ -226,6 +251,7 @@ There are many design decisions to consider when deploying an indirectly-backed 
 If the contract holding the deposit is thought of as a financial instrument (and the stablecoin could enable it to be sold from Alice to Bob), it appears to be a novel configuration. It however has certain aspects in common with existing financial instruments. We outline a few here for readers familiar with finance, but the rest of this section can otherwise be skipped. Repurchase agreements also over-collateralize to insure against a decrease in the collateralized asset's value. If the contracts are sold, the value depends on the future exchange rate and thus are effectively an ETH-settled derivative, but not of a standard type. Another way to think about the stablecoin and underlying contract is as a single asset with two tranches: the first tranche is held by the buyer of the stablecoin and gets paid first until \$1 USD is reached, then the rest of the deposit spills into the second tranche (held by the underwriter of the contract). 
 
 % Jeremy: check the math of triggering earlier to confirm that there is no difference
+% Jeremy: triggering earlier actually loses money for the coin holder !
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -264,7 +290,7 @@ Cryptocurrencies like Bitcoin release new BTC to miners on a fixed schedule that
 
 Allowing a crypto-currency to expand is not difficult. Who benefits from the new currency is a design decision---options include: (1) existing holders of the currency in proportion to their holdings, (2) existing holders through a random lottery, and (3) miners. For some stablecoins in this category, interventions are triggered by the exchange rate as determined by an oracle. In the RSCoin framework~\cite{danezis2015centrally}, intervention is based on human  (\ie economists at a central bank) discretion. Finally, for some coins, contraction of the money supply is also supported. This is an interesting aspect as the technology of a cryptocurrency enables currency to be removed at any time from any holder; balancing this with a fair procedure adds further interest.
 
-\paragraph{Process.} Alice forks Bitcoin to create a new altcoin called AliceCoin. She sets Bitcoin's fixed schedule for releasing new Bitcoin as the default behaviour but allows this value (called the coinbase amount) to be tweaked according to the rules outlined below. She setups up a trusted oracle for the latest exchange rate of AliceCoins to USD. AliceCoin is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD. If the price exceeds \$1.02 USD, the miner is allowed to increase the coinbase amount (the amount is determined by some mathematical relationship with how much the price exceeds \$1.02 USD). If the price dips under \$0.98 USD, the miner must decrease the coinbase amount (again, based on some mathematical relationship). The correctness of the claimed coinbase is verified by other miners in deciding to accept or reject a mined block, as per all other checked conditions in Bitcoin.
+\paragraph{Process.} See Table~\ref{tab:mech}.
 
 \paragraph{Variant Process.} Similar to above, Alice forks Bitcoin, preserves its coinbase schedule, and adds a trusted exchange rate oracle. When the price exceeds \$1.02 USD, the coin increases the balance of every AliceCoin holder; when it dips below \$0.98 USD, the coin decreases the balance of every AliceCoin holder.
 
@@ -282,7 +308,7 @@ Allowing a crypto-currency to expand is not difficult. Who benefits from the new
 
 The second subtype of intervention-based stablecoin is modelled on the same premise that an increased currency supply weakens the currency, while decreases strengthen it. However it uses an indirect method to introduce new currency into circulation and withdraw currency. 
 
-\paragraph{Process.} Alice creates an ERC20 token called AliceCoin and setups up a trusted oracle for the latest exchange rate of AliceCoins to USD. A smart contract is programmed to apply an intervention when the price of an AliceCoin exceeds \$1.02 USD or dips below \$0.98 USD.  If the price exceeds \$1.02 USD, the contract creates new a set of AliceCoins (the size is determined by some mathematical relationship with how much the price exceeds \$1.02 USD) and transfers them to users waiting in line for them. How do users wait in line? When the price dips under \$0.98 USD, the contract creates new positions at the end of the line and auctions them off to the highest bidder. The payment for a place in line is made in AliceCoins from the bidder to the contract and the contract destroys the payment. The place in line is a transferrable token. An additional transferrable token can be auctioned off which receives AliceCoins when the line is empty.
+\paragraph{Process.} See Table~\ref{tab:mech}.
 
 \paragraph{Price Stability.} If many bids in excess of \$1.02 USD remain unexecuted, the logic follows the previous section: the currency is handed out in hopes that the bids will be more attractive with a new influx of cash. The justification for asks below \$0.98 is premised on individuals buying places in line, and if this premise is true, the resulting contraction of the currency follows the same logic as the previous section. This logic was already inconclusive without the addition of this questionable premise. The purchase of a spot in line is highly speculative --- not just that the currency will return to stability but that it will actually accrue value in the long run that will require correction. Thus a spot in line might never be reached and is in fact worthless. The risk that a spot in line is worthless will increase the longer the line gets. As the line gets longer, the price of a place in line should fall, and the speculative market should thin out to only traders wanting a high risk/reward ratio. These trends do not point toward a recovery in price. 
 
@@ -376,6 +402,11 @@ As users' mental model of gas improves over time, the volatility of gas has the 
 %Interest rates: borrower pays her loan + interest
 %Negative interest rate: borrower is paid the interest + she uses the loan
 %Sweden and Japan are examples of countries that use NIR
+
+%========================%
+
+%\subsection{Liquidity Crisis and others}
+
 
 %========================%
 
